<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UD2_4Ejercicios">
    <item android:id="@+id/datosPersonales"
        android:title="@string/datos_personales"
        android:orderInCategory="1"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/datosIdent"
                android:title="@string/datosIdent"
                android:orderInCategory="1"/>
            <item android:id="@+id/datosContacto"
                android:title="@string/datosContacto"
                android:orderInCategory="2"/>
        </menu>
    </item>
    <item android:id="@+id/datosProfes"
        android:title="@string/datosProfe"
        android:orderInCategory="1">
        <menu>
            <item android:id="@+id/estudios"
                android:title="@string/infAcademica"
                android:orderInCategory="1"/>
            <item android:id="@+id/trabajo"
                android:title="@string/expLaboral"
                android:orderInCategory="2"/>
            <item android:id="@+id/cursos"
                android:title="@string/cursos"
                android:orderInCategory="3"/>
        </menu>
    </item>
    <item android:id="@+id/ayuda"
        android:title="@string/ayuda"
        android:orderInCategory="1"/>
</menu>